--- a/api.yaml
+++ b/api.yaml
@@ -1,4 +1,8 @@
 version: '3'
 services:
-  api-inst:
-    image: zcohn93/webapp-gateway-api:0.2
+  backend-main:
+    image: zcohn93/webapp-gateway-api:0.6
+    ports:
+      - 4000:4000
+    environment:
+      - PORT=4000
